force-app/main/default/objects/Showroom_User__c/Showroom_User__c.object-meta.xml
<CustomObject>
    <label>Showroom User</label>
    <nameField>
        <label>ShowRoom User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Showroom User</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>