force-app/main/default/objects/Showroom_User__c/fields/Backlogs__c.field-meta.xml
<CustomField>
    <fullName>Backlogs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Backlogs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>