force-app/main/default/objects/Showroom_User__c/fields/Backlogs_Inactivity__c.field-meta.xml
<CustomField>
    <fullName>Backlogs_Inactivity__c</fullName>
    <formula>Backlogs__c &gt;= Threashold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backlogs Inactivity</label>
    <type>Checkbox</type>
</CustomField>