force-app/main/default/objects/Showroom_User__c/fields/Daily_Assignment_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_Assignment_Limit__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Daily Assignment Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>