force-app/main/default/objects/Showroom_User__c/fields/Exotel_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Exotel_Phone_Number__c</fullName>
    <formula>Showroom_Name__r.Exotel_Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exotel Phone Number</label>
    <type>Text</type>
</CustomField>