force-app/main/default/objects/Showroom_User__c/fields/IM_Class__c.field-meta.xml
<CustomField>
    <fullName>IM_Class__c</fullName>
    <defaultValue>&apos;Bronze&apos;</defaultValue>
    <label>IM Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>