force-app/main/default/objects/Showroom_User__c/fields/IronMan__c.field-meta.xml
<CustomField>
    <fullName>IronMan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IronMan</label>
    <type>Checkbox</type>
</CustomField>