force-app/main/default/objects/Showroom_User__c/fields/Is_Active_in_System__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_in_System__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Will be used to denote if the showroom user active in roster system or has left the system.</description>
    <label>Is Active in System?</label>
    <type>Checkbox</type>
</CustomField>