force-app/main/default/objects/Showroom_User__c/fields/Luxe_Service_Showroom__c.field-meta.xml
<CustomField>
    <fullName>Luxe_Service_Showroom__c</fullName>
    <formula>Showroom_Name__r.Luxe_service__c</formula>
    <label>Luxe Service Showroom</label>
    <type>Checkbox</type>
</CustomField>