force-app/main/default/objects/Showroom_User__c/fields/Monthly_Assignment_Limit__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Assignment_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly Assignment Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>