force-app/main/default/objects/Showroom_User__c/fields/Monthly_Exception_Leads_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Exception_Leads_Assigned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly Exception Leads Assigned</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>