force-app/main/default/objects/Showroom_User__c/fields/Offline_Daily_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Offline_Daily_Assignment__c</fullName>
    <label>Offline Daily Assignment</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>