force-app/main/default/objects/Showroom_User__c/fields/Outskirts_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Outskirts_Assignment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Outskirts Daily Assignment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>