force-app/main/default/objects/Showroom_User__c/fields/Outskirts_Assignment_Limit__c.field-meta.xml
<CustomField>
    <fullName>Outskirts_Assignment_Limit__c</fullName>
    <label>Outskirts Daily Assignment Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>