force-app/main/default/objects/Showroom_User__c/fields/Outskirts_Monthly_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Outskirts_Monthly_Assignment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Outskirts Monthly Assignment</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>