force-app/main/default/objects/Showroom_User__c/fields/Outskirts_Monthly_Assignment_Limit__c.field-meta.xml
<CustomField>
    <fullName>Outskirts_Monthly_Assignment_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Outskirts Monthly Assignment Limit</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>