force-app/main/default/objects/Showroom_User__c/fields/Reached_Daily_Limit__c.field-meta.xml
<CustomField>
    <fullName>Reached_Daily_Limit__c</fullName>
    <formula>IF((Daily_Assignment__c &gt;= Daily_Assignment_Limit__c),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reached Daily Limit</label>
    <type>Checkbox</type>
</CustomField>