force-app/main/default/objects/Showroom_User__c/fields/Reached_Monthly_Limit__c.field-meta.xml
<CustomField>
    <fullName>Reached_Monthly_Limit__c</fullName>
    <formula>IF((Monthly_Assignment__c+Monthly_Exception_Leads_Assigned__c &gt;= Monthly_Assignment_Limit__c),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reached Monthly Limit</label>
    <type>Checkbox</type>
</CustomField>