force-app/main/default/objects/Showroom_User__c/fields/Reached_Offline_Daily_Limit__c.field-meta.xml
<CustomField>
    <fullName>Reached_Offline_Daily_Limit__c</fullName>
    <formula>IF(( Offline_Daily_Assignment__c &gt;=  Offline_Daily_Assignment_Limit__c ),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reached Offline Daily Limit</label>
    <type>Checkbox</type>
</CustomField>