force-app/main/default/objects/Showroom_User__c/fields/Reached_Outskirts_Limit__c.field-meta.xml
<CustomField>
    <fullName>Reached_Outskirts_Limit__c</fullName>
    <formula>IF((  Outskirts_Assignment__c  &gt;=  Outskirts_Assignment_Limit__c  ),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reached Outskirts Daily Limit</label>
    <type>Checkbox</type>
</CustomField>