force-app/main/default/objects/Showroom_User__c/fields/Reached_Outskirts_Monthly_Limit__c.field-meta.xml
<CustomField>
    <fullName>Reached_Outskirts_Monthly_Limit__c</fullName>
    <formula>If( Outskirts_Monthly_Assignment__c  &gt;=  Outskirts_Monthly_Assignment_Limit__c ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reached Outskirts Monthly Limit</label>
    <type>Checkbox</type>
</CustomField>