force-app/main/default/objects/Showroom_User__c/fields/Reached_WT_Leads_Monthly_Limit__c.field-meta.xml
<CustomField>
    <fullName>Reached_WT_Leads_Monthly_Limit__c</fullName>
    <formula>IF(( WT_Leads_Monthly_Assignment__c &gt;= WT_Leads_Monthly_Assignment_Limit__c ),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reached WT Leads Monthly Limit</label>
    <type>Checkbox</type>
</CustomField>