force-app/main/default/objects/Showroom_User__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Showroom Manager</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Iron Man</fullName>
            </value>
            <value>
                <fullName>Delivery Manager</fullName>
            </value>
            <value>
                <fullName>Design Manager</fullName>
            </value>
            <value>
                <fullName>Business Development Manager</fullName>
            </value>
            <value>
                <fullName>Pre-Sales Freelancer</fullName>
            </value>
            <value>
                <fullName>Tele Caller Agent</fullName>
            </value>
            <value>
                <fullName>Product Consultant</fullName>
            </value>
            <value>
                <fullName>Doowup Presales</fullName>
            </value>
            <value>
                <fullName>Central Team Agent</fullName>
            </value>
            <value>
                <fullName>Inside Sales Agent</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Desgin Manager</fullName>
                <isActive>false</isActive>
                <label>Desgin Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>