force-app/main/default/objects/Showroom_User__c/fields/Showroom_Name__c.field-meta.xml
<CustomField>
    <fullName>Showroom_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Showroom Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master__c.Type__c</field>
            <operation>equals</operation>
            <value>Showroom</value>
        </filterItems>
        <filterItems>
            <field>Master__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master__c</referenceTo>
    <relationshipLabel>Showroom User</relationshipLabel>
    <relationshipName>Showroom_User</relationshipName>
    <type>Lookup</type>
</CustomField>