force-app/main/default/objects/Showroom_User__c/fields/Single_Input_Lead_Team__c.field-meta.xml
<CustomField>
    <fullName>Single_Input_Lead_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single Input Lead Team</label>
    <type>Checkbox</type>
</CustomField>