force-app/main/default/objects/Showroom_User__c/fields/Specialisation__c.field-meta.xml
<CustomField>
    <fullName>Specialisation__c</fullName>
    <label>Specialisation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renovation</fullName>
            </value>
            <value>
                <fullName>Paint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>