force-app/main/default/objects/Showroom_User__c/fields/Threashold__c.field-meta.xml
<CustomField>
    <fullName>Threashold__c</fullName>
    <defaultValue>18</defaultValue>
    <label>Threashold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>