force-app/main/default/objects/Showroom_User__c/fields/User_Brand__c.field-meta.xml
<CustomField>
    <fullName>User_Brand__c</fullName>
    <label>User Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HomeLane</fullName>
            </value>
            <value>
                <fullName>Doowup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>