force-app/main/default/objects/Showroom_User__c/fields/Webinar_Lead_Team__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Lead_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Webinar Lead Team</label>
    <type>Checkbox</type>
</CustomField>