force-app/main/default/objects/Showroom_User__c/fields/WhatsAppHaptik_Team__c.field-meta.xml
<CustomField>
    <fullName>WhatsAppHaptik_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WhatsAppHaptik Team</label>
    <type>Checkbox</type>
</CustomField>