force-app/main/default/objects/Showroom_User__c/listViews/Lead_curation_class.listView-meta.xml
<ListView>
    <fullName>Lead_curation_class</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>City__c</columns>
    <columns>IsActive__c</columns>
    <columns>Role__c</columns>
    <columns>IM_Class__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>Mumbai,New Delhi,Gurgaon,Noida,Thane</value>
    </filters>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>Sales Manager,Iron Man</value>
    </filters>
    <label>Lead curation Class</label>
    <language>en_US</language>
</ListView>