force-app/main/default/objects/Showroom_User__c/listViews/Luxe_Service.listView-meta.xml
<ListView>
    <fullName>Luxe_Service</fullName>
    <columns>NAME</columns>
    <columns>Luxe_Service_Showroom__c</columns>
    <columns>IsActive__c</columns>
    <columns>IM_Class__c</columns>
    <columns>Daily_Assignment__c</columns>
    <columns>Showroom_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Luxe_Service_Showroom__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IM_Class__c</field>
        <operation>equals</operation>
        <value>Gold,Silver</value>
    </filters>
    <label>Luxe Service</label>
</ListView>