force-app/main/default/objects/Showroom_User__c/listViews/Territory_based_City_Showroom_Users.listView-meta.xml
<ListView>
    <fullName>Territory_based_City_Showroom_Users</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>City__c</columns>
    <columns>Daily_Assignment__c</columns>
    <columns>Daily_Assignment_Limit__c</columns>
    <columns>Email__c</columns>
    <columns>Monthly_Exception_Leads_Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>Bengaluru</value>
    </filters>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>Chennai</value>
    </filters>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>Hyderabad</value>
    </filters>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>Kolkata</value>
    </filters>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>Coimbatore</value>
    </filters>
    <label>Territory based City Showroom Users</label>
    <language>en_US</language>
</ListView>